--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Lezzetli Tarifler</title>
 </head>
 <body>
+  <div style="background-color: #f8f8f8; border: 1px solid #ccc; padding: 10px; margin: 20px 0; text-align: center;">
+  <strong>Reklam Alanı</strong><br>
+  300x250 Reklam Buraya Gelecek
+</div>
   <h1>Lezzetli Tarifler'e Hoş Geldiniz!</h1>
   <p>Tarifleri görmek için <a href="tarifler.html">tıklayın</a>.</p>
 </body>
