--- a/tarifler.html
+++ b/tarifler.html
@@ -5,6 +5,10 @@
   <title>Tarif Listesi</title>
 </head>
 <body>
+  <div style="background-color: #f8f8f8; border: 1px solid #ccc; padding: 10px; margin: 20px 0; text-align: center;">
+  <strong>Reklam Alanı</strong><br>
+  300x250 Reklam Buraya Gelecek
+</div>
   <h1>Tarifler</h1>
   <ul>
     <li><a href="#">Mercimek Çorbası</a></li>
