--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lezzetli Tarifler</title>
 </head>
+  <link rel="stylesheet" href="style.css">
 <body>
   <div style="background-color: #f8f8f8; border: 1px solid #ccc; padding: 10px; margin: 20px 0; text-align: center;">
   <strong>Reklam Alanı</strong><br>
