--- a/tarif.html
+++ b/tarif.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Karnıyarık Tarifi</title>
 </head>
+    <link rel="stylesheet" href="style.css">
 <body>
     <h1>Karnıyarık</h1>
     <p>Patlıcan, kıyma, soğan ve baharatların enfes birleşimi!</p>
