--- a/iletisim.html
+++ b/iletisim.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Lezzetli Tarifler - İletişim</title>
 </head>
+    <link rel="stylesheet" href="style.css">
 <body>
     <h1>İletişim</h1>
     <form>
