--- a/tarifler.html
+++ b/tarifler.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Tarif Listesi</title>
 </head>
+  <link rel="stylesheet" href="style.css">
 <body>
   <div style="background-color: #f8f8f8; border: 1px solid #ccc; padding: 10px; margin: 20px 0; text-align: center;">
   <strong>Reklam Alanı</strong><br>
